2016-09-22  SilverNexus
	* jump_table.c: Catch a performance refactor of while->do-while I missed last time.

2016-09-15  SilverNexus
	* jump_table.c: Refactor a while-loop to a do-while loop.
	* test/performance_test/main.c: Refactor a while-loop to a do-while loop.

2016-09-08  SilverNexus
	* search.c: Fix dirent-based search to not return values from a void function.

2016-06-03  SilverNexus
	* search.c: Remove unecessary variable in parse_file().

2016-06-06  SilverNexus
	* search.c: Improve comparison efficiency when not using mmap on binary file detection.

2016-06-02  SilverNexus
	* fileperuser_search.c: Reduce the math required to return a value in fileperuser_memmem_boyer().
	* search.c: Increase severity of short read on non-mmap file load to ERROR and bail on that file.
	  Alter detection of next line in single match to use memchr().
	* main.c: Move search string length check up to reduce unnecessary processing when no search
	  string is supplied.

2016-06-01  SilverNexus
	* parseArgs.c: Add arguments -b and --binary to toggle searching binary
	  files.
	* settings.h: Define search flag for binary files.
	* search.c: Add Functionality to test for binary files.
	  Optimize line counting to use memchr() instead of strchr().
	  Conditionally compile mmap file end fix only when we have mmap().
	  Move old check for null termination into new binary file detection;
	  optimize its new placement.
	* README: Updated usage to reflect new binary file search feature.
	* doc/fileperuser.man: Added usage information for new arguments.
	* test/search_test/test_search_results.sh: Added tests for new binary
	  files search option.
	* test/search_test/test_binary_*: Added new test results.
	* main.c: Fixed a bug that prevented the first character of needle from
	  being converted to lowercase on case-insensitive searches.

2016-05-30  SilverNexus
	* fileperuser_search.c: Remove fileperuser_memcasemem_brute().